# schaken-base

./: .gitignore  CMakeLists.txt  README.md  SchaakStuk.cpp  SchaakStuk.h  chessboard.cpp  chessboard.h  game.cpp  game.h  mainwindow.cpp  mainwindow.h  notes.txt
src/game/: game.h
src/gui/: mainwindow.cpp  mainwindow.h
src/pieces/: chesspiece.cpp  chesspiece.h
